2007-07-27  Tim-Philipp Müller  <tim at centricular dot net>

	* src/pack.c:
	* src/pack.h:
	  Const-ify input buffer arguments to gnet_unpack*().

2007-07-27  Tim-Philipp Müller  <tim at centricular dot net>

	* src/pack.c: (flipmemcpy):
	  Fix broken flipmemcpy() function - it never actually reversed the
	  order! Which noone ever noticed, because it is only used if more
	  than four bytes need reversing, and the only types with a possible
	  size of more than four bytes are void* and double and at least for
	  the latter the endianness modifiers are ignored. Not sure what to
	  do about pointers yet, we should probably just ignore those
	  modifiers for pointers too. Also fix gtk-doc blurb.

2007-07-27  Tim-Philipp Müller  <tim at centricular dot net>

	* src/base64.c: (gnet_base64_encode), (gnet_base64_decode):
	* src/base64.h:
	  Make arguments for input buffers constant; add more guards against
	  invalid arguments.

2007-07-26  Tim-Philipp Müller  <tim at centricular dot net>

	* Makefile.am:
	* configure.ac:
	* macros/Makefile.am:
	* macros/gnet-arch.m4:
	* tests/Makefile.am:
	* tests/check/Makefile.am:
	* tests/check/gnet-valgrind.supp:
	* tests/check/gnet/gnetabi.c:
	* tests/check/gnet/struct_i386.h:
	* tests/check/gnet/struct_ppc64.h:
	* tests/check/gnet/struct_x86_64.h:
	* tests/check/gnetcheck.c:
	* tests/check/gnetcheck.h:
	  Add build infrastructure for unit tests based on libcheck.

2007-07-22  Tim-Philipp Müller  <tim at centricular dot net>

	* autogen.sh:
	  Use '=' instead of '==' to test for equality, dash in gutsy (which
	  seems to be the default shell now) doesn't seem to like '=='.

	* tests/conn_http_test.c:
	  Add cast to fix compiler warnings due to printf format.

2007-06-11  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Samuel Cormier-Iijima <sciyoshi@gmail.com>

	* examples/xmlrpc/xmlrpc-server.c:
	(create_response_string):
	  Printf format fix for 64-bit systems.
